// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component should appear above the dropdown button 1`] = `
<DocumentFragment>
  <div
    class="dropdown is-up"
    data-testid="dropdown-container"
  >
    <div
      data-testid="dropdown-trigger"
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon"
        >
          <i
            class="mdi mdi-chevron-down"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      id="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item"
          role="presentation"
          title="value"
        >
          Item
        </div>
        <div
          class="dropdown-item"
          role="presentation"
          title="other"
        >
          Other
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should be right-aligned when using "right" prop 1`] = `
<DocumentFragment>
  <div
    class="dropdown is-right"
    data-testid="dropdown-container"
  >
    <div
      data-testid="dropdown-trigger"
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon"
        >
          <i
            class="mdi mdi-chevron-down"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      id="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item"
          role="presentation"
          title="value"
        >
          Item
        </div>
        <div
          class="dropdown-item"
          role="presentation"
          title="other"
        >
          Other
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <div
    class="dropdown other-class"
    data-testid="dropdown-container"
  >
    <div
      data-testid="dropdown-trigger"
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon"
        >
          <i
            class="mdi mdi-chevron-down"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      id="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item is-active"
          role="presentation"
          title="value"
        >
          Item
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should have custom inline styles 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
    data-testid="dropdown-container"
    style="width: 400px;"
  >
    <div
      data-testid="dropdown-trigger"
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon"
        >
          <i
            class="mdi mdi-chevron-down"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      id="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item is-active"
          role="presentation"
          title="value"
        >
          Item
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should have divider 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
    data-testid="dropdown-container"
    style="width: 400px;"
  >
    <div
      data-testid="dropdown-trigger"
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon"
        >
          <i
            class="mdi mdi-chevron-down"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      id="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item is-active"
          role="presentation"
          title="value"
        >
          Item
        </div>
        <hr
          class="dropdown-divider"
        />
        <div
          class="dropdown-item"
          role="presentation"
          title="other"
        >
          Other
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should render 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
    data-testid="dropdown-container"
  >
    <div
      data-testid="dropdown-trigger"
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon"
        >
          <i
            class="mdi mdi-chevron-down"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      id="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item is-active"
          role="presentation"
          title="value"
        >
          Item
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should show custom label passed to the label prop 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
    data-testid="dropdown-container"
  >
    <div
      data-testid="dropdown-trigger"
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          test label
        </span>
        <span
          class="icon"
        >
          <i
            class="mdi mdi-chevron-down"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      id="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item"
          role="presentation"
          title="value"
        >
          Item
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should show the label of the first dropdown item when no custom label is passed 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
    data-testid="dropdown-container"
  >
    <div
      data-testid="dropdown-trigger"
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon"
        >
          <i
            class="mdi mdi-chevron-down"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      id="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item"
          role="presentation"
          title="value"
        >
          Item
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
